Fix layout shift on home page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,7 @@ main {
 
 .prose p > img {
   max-width: 100%;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   margin-top: 4px;
